fix: optimize and fix some validate function, add new api for checkin student
